core/argocd/manifests/service-application-controller-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-application-controller-metrics
  labels:
    app.kubernetes.io/name: argocd-application-controller-metrics
    app.kubernetes.io/part-of: argocd
spec:
  ports:
    - name: metrics
      port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app.kubernetes.io/name: argocd-application-controller
