core/argocd/manifests/ingress-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-webhook
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: argocd-redirectscheme@kubernetescrd
spec:
  rules:
    - host: argocd.benkonicek.com
      http:
        paths:
          - path: /api/webhook
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
  tls:
    - hosts:
        - argocd.benkonicek.com
      secretName: argocd-webhook-cert
